Small styling changes to profile

--- a/public/profile.html
+++ b/public/profile.html
@@ -41,32 +41,13 @@
     <div id="page">
         <div id="pageheader">
             <img id="profilepicture" src="images/mandelbrot.png" />
-            <a id="username">YourName</a>
+            <div id="username"></div>
             <div id="biography"> <!-- needs a character limit if we do editing -->
                 Hello this is my bio, what an amazing website
             </div>
         </div>
         <div id="posts">
             <!-- add posts here! -->
-        </div>
-    </div>
-
-    <div id="friends">
-        <div id="friendstitle">Friends</div>
-
-        <!--TODO: add real profiles here-->
-
-        <div id="profilewrap">    
-            <img id="friendprofilepicture" src="images/mandelbrot.png" />
-            <a id="friendusername" >UserName1</a>
-        </div>
-        <div id="profilewrap">    
-            <img id="friendprofilepicture" src="images/mandelbrot.png" />
-            <a id="friendusername" >UserName2</a>
-        </div>
-        <div id="profilewrap">    
-            <img id="friendprofilepicture" src="images/mandelbrot.png" />
-            <a id="friendusername" >UserName3</a>
         </div>
     </div>
 </body> 
