styling for profile page

--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -55,8 +55,8 @@
             
             <div id="filewrap">
                 <input id="fileimage" type="file" name="filetoupload"/>
+                <input type="submit" id="button2" value="Post" href="/home"/>
             </div>
-            <input type="submit" id="button2" value="Post"/>
         </form>
         
 
