--- a/public/profile.html
+++ b/public/profile.html
@@ -28,6 +28,9 @@
                 <a class="title" href="/messages">
                     Messages
                 </a>
+                <a class="title" href="/profile">
+                    Profile
+                </a>
                 <a class="title" href="/News">
                     News
                 </a>
@@ -41,9 +44,16 @@
     <div id="page">
         <div id="pageheader">
             <img id="profilepicture" src="images/mandelbrot.png" />
-            <div id="username"></div>
-            <div id="biography"> <!-- needs a character limit if we do editing -->
-                Hello this is my bio, what an amazing website
+            <div id="infowrap">
+                <div id="username">
+
+                </div>
+                <div id="biography"> <!-- needs a character limit if we do editing -->
+                    Hello this is my bio, what an amazing website
+                </div>
+                <div id="edit">
+                    Edit
+                </div>
             </div>
         </div>
         <div id="posts">
