Code cleanup and small styling changes to messaging

--- a/public/messages.html
+++ b/public/messages.html
@@ -51,10 +51,8 @@
             <div class="message" id="message"> <!-- this is the one room -->
                 <div id="innerMessage">
                     <img id="roomimage" src="images/mandelbrot.png" />
-                    <a id="roomName"></a>
-                    <div id="history">
-
-                    </div>
+                    <div id="roomName"></div>
+                    <div id="history"></div>
                     <div id="prompt">
                         Click here to send a message
                     </div>
