Making the navbars uniform

--- a/public/messages.html
+++ b/public/messages.html
@@ -29,6 +29,9 @@
                     <a class="title" href="/profile">
                         Profile
                     </a>
+                    <a class="title" href="/messages">
+                        Messages
+                    </a>
                     <a class="title" href="/news">
                         News
                     </a>
