--- a/public/news.html
+++ b/public/news.html
@@ -31,6 +31,9 @@
                 <a class="title" href="/messages">
                     Messages
                 </a>
+                <a class="title" href="/news">
+                    News
+                </a>
                 <a class="logout", href="/logout">
                     Log Out
                 </a>
