Small styling changes and code/comment cleanup

--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -17,16 +17,16 @@
                     BookFace
                 </a>
                 <a id="topLinks" href="/home">
-                    home
+                    Home
                 </a>
                 <a id="topLinks" href="/profile">
-                    profile
+                    Profile
                 </a>
                 <a id="topLinks" href="/messages">
-                    messages
+                    Messages
                 </a>
                 <a id="topLinks" href="/news">
-                    news
+                    News
                 </a>
                 <form action="/logout">
                     <button id="button1">
