--- a/public/profile.html
+++ b/public/profile.html
@@ -45,15 +45,7 @@
         <div id="pageheader">
             <img id="profilepicture" src="images/mandelbrot.png" />
             <div id="infowrap">
-                <div id="username">
-
-                </div>
-                <div id="biography"> <!-- needs a character limit if we do editing -->
-                    Hello this is my bio, what an amazing website
-                </div>
-                <div id="edit">
-                    Edit
-                </div>
+                <div id="username"></div>
             </div>
         </div>
         <div id="posts">
